--- a/src/02-flip/index.html
+++ b/src/02-flip/index.html
@@ -46,6 +46,8 @@
       </figure>
     </div>
 
-    <script type="module" src="index.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/Flip.min.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
